# Spotify-bot

./: .cache  .gitignore  BLACKPINK – ‘Yeah Yeah Yeah’ M⧸V [DUkW0VHF5Tc].webm  Charli XCX - Crash [Official Visualiser] [nwNQexRDAf0].webm.part  README.md  Z_Logs.txt  audio.py  billboard.py  bot.py  channel_music.db  charts.py  config.py  data.txt  db.py  functions.py  get_lyrics.py  ig_followers.py  info.py  keep_alive.py  keyboards.py  livescore.py  logging_config.py  logs.txt  lyrics.py  lyrics_genius.py  main.py  main2.py  pyproject.toml  requirements.txt  speed.py  spotify.py  spotify2.py  token.txt  top_songs.py  utils.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.2.1-py3-none-any/pip-23.2.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-68.0.0-py3-none-any/setuptools-68.0.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.41.0-py3-none-any/wheel-0.41.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
data/: chats.txt  names.txt
output/: README.md  dir.txt
