[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
telebot = "^0.0.5"
lyrics-extractor = "^3.0.1"
mutagen = "^1.47.0"
pytube = "^15.0.0"
requests = "^2.31.0"
spotipy = "^2.23.0"
flask = "^3.0.0"
lyricsgenius = "^3.0.1"
unidecode = "^1.3.7"
raypy = "^0.0.3"
logging-config = "^1.0.4"
bs4 = "^0.0.1"
config = "^0.5.1"
spotify = "^0.10.2"
yt-dlp = "^2023.10.13"
google-api-python-client = "^2.108.0"
eyed3 = "^0.9.7"
lyricscorpora = "^1.0.0"
python-dotenv = "^1.0.0"
functions = "^0.7.0"
spotdl = "^4.2.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"